Added Player Movement Component

--- a/Astrophel/Config/DefaultEngine.ini
+++ b/Astrophel/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/MAP_Main.MAP_Main
-EditorStartupMap=/Game/Maps/MAP_Main.MAP_Main
+GameDefaultMap=/Game/Maps/Map_Main.Map_Main
+EditorStartupMap=/Game/Maps/Map_Main.Map_Main
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -48,10 +48,7 @@ r.Shadow.Virtual.Enable=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
-r.DefaultFeature.MotionBlur=False
 r.AntiAliasingMethod=0
-r.DefaultFeature.AutoExposure=True
-r.DefaultFeature.AutoExposure.Bias=1.000000
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
@@ -68,7 +65,7 @@ FontDPI=72
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=3AECD2EF4855FDFFC8B940A045DBA759
+SecurityToken=E7CBB3F44022C36E613B6D85B4C64F54
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
