Added Solar Pod

--- a/Astrophel/Config/DefaultEngine.ini
+++ b/Astrophel/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Map_Main.Map_Main
+GameDefaultMap=/Game/Maps/MAP_Title.MAP_Title
 EditorStartupMap=/Game/Maps/Map_Main.Map_Main
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
